--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </head>
 
   <body>
